--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -70,12 +70,23 @@
 <div class="page-section mb-60">
     <div class="container">
         <div class="col-lg-10 mx-auto">
+            {% if form.errors %} {% for field in form %} {% for error in field.errors %}
+            <div class="alert alert-danger alert-dismissable">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>{{ error|escape }}</strong>
+            </div>
+            {% endfor %} {% endfor %} {% for error in form.non_field_errors %}
+            <div class="alert alert-danger alert-dismissable">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>{{ error|escape }}</strong>
+            </div>
+            {% endfor %} {% endif %}
             <form action="#" method="POST" enctype="multipart/form-data">
                 <div class="login-form">
-                    <h4 class="login-title">Update Your Profile</h4>
+                    <h4 class="login-title">Change Your Password</h4>
                     <div class="row">
                         <fieldset class="form-group">
-                            {% csrf_token %} {{ user_form|crispy }} {{ profile_form|crispy }}
+                            {% csrf_token %} {{ form|crispy }}
                         </fieldset>
                         <div class="col-sm-4">
                             <button class="btn btn-outline-white-primary" type='submit'>Update</button>
