--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}"> {% block styles %}{% endblock %}
     <!-- Favicon-->
     <link rel="shortcut icon" href="favicon.png">
@@ -33,8 +34,13 @@
 </head>
 
 <body>
-    <!-- navbar-->
+    <!-- Page Preloader Ends-->
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
+    <!-- Page Preloader Ends -->
     <header class="header">
+        <!-- NAVBAR STARTS-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a href="/" class="navbar-brand">
@@ -135,30 +141,33 @@
                 </div>
             </div>
         </nav>
+        <!-- NAVBAR ENDS -->
     </header>
+
+
     <div>
-        {% if messages %} {% for message in messages %}
+        {% if messages %}
+        <!-- for loop START-->
+        {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
         </div>
-
-        <!-- <li{% if message.tags %} class="alert alert-{{ message.tags }}" {% endif %}>{{ message }}</li>  -->
-        {% endfor %} {% endif %}
-
+        {% endfor %}
+        <!-- loop ends -->
+        {% endif %}
         <!-- CONTENT BLOCK -->
         {% block content %} {% endblock %}
+        <!--CONTENT BLOCK ENDS  -->
     </div>
+
 
     <!-- footer -->
     <footer class="col-lg-12 footer-distributed">
-
         <div class="footer-left">
-
             <h3>{{settings.siteTitle}}</h3>
-
             <p class="footer-links">
                 <a href="#">Home</a> ·
                 <a href="#">Blog</a> ·
@@ -166,10 +175,8 @@
                 <a href="#">About</a> ·
                 <a href="#">Contact</a>
             </p>
-
             <p class="footer-company-name">{{settings.siteTitle}} &copy; 2019</p>
         </div>
-
         <div class="footer-center">
 
             <div>
@@ -207,6 +214,7 @@
         </div>
 
     </footer>
+    <!-- first footer ends -->
 
 
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
@@ -216,7 +224,8 @@
     <script src="{% static 'vendor/owl.carousel/owl.carousel.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap-select/js/bootstrap-select.min.js' %}"></script>
     <script src="{% static 'js/front.js' %}"></script>
-
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/nav.js' %}"></script>
     {% block javascripts %}{% endblock %}
 
 </body>
