--- a/templates/home.html
+++ b/templates/home.html
@@ -101,13 +101,14 @@
                 <div class="col-10 col-md-3 col-lg-3 ml-auto">
                     <p>Posted {{ trending.created_at|timesince }}</p>
                 </div>
-                <!-- <div class="col-sm-12 col-md-2 col-lg-1">
+                <div class="col-sm-12 col-md-2 col-lg-1">
                     <div class="job__star">
-                        <a href="#" data-toggle="tooltip" data-placement="top" title="Save to favourites" class="job__star__link">
-                            <i class="fa fa-star"></i>
-                        </a>
+                        {% if trending.type == '1' %}
+                        <span class="badge featured-badge badge-success">Paid</span> {% elif trending.type == '2' %}
+                        <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
+                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Remote</span> {% endif %}
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         {% endfor %}
