--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
                         </div>
                         <hr>
                         <div>
-                            <h5><a href="#">{{ cat.name }}</a></h5>
+                            <h5><a href="{% url 'jobs:filter-jobs' cat.id %}">{{ cat.name }}</a></h5>
                         </div>
                         <!-- <p><i class="fa fa-money"></i></p> -->
 
