--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -1,8 +1,11 @@
 :root {
     /* --main: #746EA9; */
-    --main: #292c2f;
-    --hover: #ffc273;
-    --default: rgb(35, 168, 177);
+    --main: #05386B;
+    --hover: #379683;
+    --default: #eddfb3;
+    --body: #fffff5;
+    --element: #379683;
+    --light-main: #05386B;
 }
 
 html {
@@ -10,7 +13,8 @@ html {
 }
 
 body {
-    height: 100%
+    height: 100%;
+    background-color: var(--body) !important;
 }
 
 header {
@@ -19,8 +23,8 @@ header {
 
 section {
     position: relative;
-    padding-top: 90px;
-    padding-bottom: 90px
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 button {
@@ -109,7 +113,7 @@ button i.fa {
 }
 
 .bg-light-gray {
-    background: #fafafa
+    background: var(--body);
 }
 
 .clickable {
@@ -121,7 +125,7 @@ button i.fa {
 }
 
 .accent {
-    color: var(--default);
+    color: var(--element);
 }
 
 .text-uppercase {
@@ -150,10 +154,6 @@ button i.fa {
 
 .text-small {
     font-size: 0.78rem
-}
-
-.bg-light-gray {
-    background: #fafafa
 }
 
 .breadcrumb {
@@ -1219,7 +1219,7 @@ ul.dropdown-menu li a:hover {
 }
 
 .box-image:hover .bg {
-    opacity: 0.7
+    opacity: 0.7;
 }
 
 .box-image:hover .name {
@@ -1236,7 +1236,7 @@ ul.dropdown-menu li a:hover {
 
 .box-image-text {
     position: relative;
-    background: #fff;
+    /* background: #fff; */
     overflow: hidden;
     text-align: center;
     margin: 15px 0
@@ -1315,10 +1315,21 @@ ul.dropdown-menu li a:hover {
 }
 
 .box-image-text .content {
-    padding: 15px 15px 0 15px;
-    border: 2px solid var(--default);
-    border-radius: 0 8px 0 8px;
-    height: 18em;
+    padding: 35px 15px 15px 15px;
+    /* border: 2px solid var(--default); */
+    border-radius: 5px;
+    height: 15.2em;
+    background-color: var(--light-main);
+}
+
+.box-image-text .content:hover {
+    padding: 35px 15px 15px 15px;
+    /* border: 2px solid var(--default); */
+    border-radius: 5px;
+    height: 15.2em;
+    background-color: var(--hover);
+    box-shadow: #1d2124;
+    transition: 0.5s;
 }
 
 .box-image-text .content h3,
@@ -1331,7 +1342,7 @@ ul.dropdown-menu li a:hover {
 }
 
 .box-image-text .content p {
-    color: #868e96;
+    color: var(--default);
     font-size: 0.9rem
 }
 
@@ -1403,9 +1414,9 @@ ul.dropdown-menu li a:hover {
 .featured-badge {
     font-weight: 300;
     border-radius: 3px;
-    margin-left: 5px;
+    /* margin-left: 5px;
     padding: 5px;
-    letter-spacing: 0.1rem
+    letter-spacing: 0.1rem */
 }
 
 .job-form-section {
@@ -1432,7 +1443,7 @@ ul.dropdown-menu li a:hover {
 }
 
 .job-form-section.job-form-section--image {
-    background: center center url("../img/career3.jpg") no-repeat;
+    background: center center url("../img/art-one.jpg") no-repeat;
     background-size: cover
 }
 
@@ -1451,7 +1462,9 @@ ul.dropdown-menu li a:hover {
 }
 
 .job-listing {
+    background-color: var(--light-main);
     border: solid 1px #dee2e6;
+    border-radius: 8px;
     border-bottom: none;
     padding-top: 30px;
     padding-bottom: 10px;
@@ -1473,7 +1486,7 @@ ul.dropdown-menu li a:hover {
 }
 
 .job-listing:hover {
-    background: #fafafa
+    background: var(--hover);
 }
 
 .job-content {
@@ -2745,7 +2758,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #555;
-    background-color: #fff
+    background-color: #fff;
 }
 
 a {
@@ -2756,7 +2769,7 @@ a {
 
 a:focus,
 a:hover {
-    color: var(--hover);
+    color: var(--default);
     text-decoration: underline;
 }
 
@@ -2780,7 +2793,7 @@ h6,
     font-family: "Montserrat", Helvetica, Arial, sans-serif;
     font-weight: 700;
     line-height: 1.2;
-    color: #555;
+    color: var(--main);
     text-transform: uppercase;
     letter-spacing: 0.1em
 }
@@ -3462,4 +3475,8 @@ select.form-control-lg:not([size]):not([multiple]) {
 .custom-file-input.is-invalid:focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
     box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25)
+}
+
+footer {
+    background-color: var(--main);
 }
