--- a/templates/base.html
+++ b/templates/base.html
@@ -64,10 +64,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'SiteSettings:about' %}" class="nav-link">About</a>
+                            <a href="{% url 'jobs:companies' %}" class="nav-link">Companies</a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'SiteSettings:contact' %}" class="nav-link">Contact</a>
+                            <a href="#" class="nav-link">Blog</a>
                         </li>
                         {% if request.user.is_authenticated and request.user.role == 'employer' %}
                         <li class="nav-item dropdown">
@@ -165,43 +165,38 @@
 
 
     <!-- footer -->
-    <footer class="col-lg-12 footer-distributed">
-        <div class="footer-left">
+    <footer class="col-lg-12 footer-distributed" style="background-image: linear-gradient(180deg,  #fffff5,#05386B);">
+        <div>
+
+        </div>
+        <div class="footer-left" style="text-align: center;">
             <h3>{{settings.siteTitle}}</h3>
             <p class="footer-links">
                 <a href="#">Home</a> ·
                 <a href="#">Blog</a> ·
-                <a href="#">Pricing</a> ·
-                <a href="#">About</a> ·
-                <a href="#">Contact</a>
+                <a href="{% url 'SiteSettings:about' %}" class="nav-link">About</a> .
+                <a href="{% url 'SiteSettings:contact' %}">Contact</a>
             </p>
             <p class="footer-company-name">{{settings.siteTitle}} &copy; 2019</p>
         </div>
         <div class="footer-center">
-
             <div>
                 <i class="fa fa-map-marker"></i>
                 <p><span></span>{{settings.siteAddress}}</p>
             </div>
-
             <div>
                 <i class="fa fa-phone"></i>
                 <p>+{{settings.sitePhone}}</p>
             </div>
-
             <div>
                 <i class="fa fa-envelope"></i>
                 <p><a href="#">{{settings.siteEmail}}</a></p>
             </div>
-
         </div>
-
         <div class="footer-right">
-
             <p class="footer-company-about">
                 <span>About the company</span>{{settings.siteAbout}}
             </p>
-
             <div class="footer-icons">
 
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -210,9 +205,7 @@
                 <a href="#"><i class="fa fa-github"></i></a>
 
             </div>
-
         </div>
-
     </footer>
     <!-- first footer ends -->
 
