--- a/templates/jobs/companies.html
+++ b/templates/jobs/companies.html
@@ -1,19 +1,19 @@
-{% extends 'base.html' %} {% load static %} {% block title %} All jobs {% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% block title %} All Companies {% endblock %} {% block content %}
 
-<section class="job-form-section job-form-section--compressed">
+<section class="job-form-section job-form-section--compressed" style="background-image: linear-gradient(180deg, #05386B, #fffff5);">
     <div class="container">
-        <h4 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h4>
+        <h3 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h3>
         <form id="job-main-form" method="get" action="#" class="job-main-form">
             <div class="controls">
                 <div class="row align-items-end">
                     <div class="col-sm-1 col-lg-2"></div>
                     <div class="col-sm-5 col-lg-4 form-group">
-                        <label for="profession">Position</label>
-                        <input type="text" id="position" name="position" placeholder="ex: Software Engineer" class="form-control">
+                        <label for="profession">Profession</label>
+                        <input type="text" id="profession" name="profession" placeholder="ex: Software Engineer" class="form-control">
                     </div>
                     <div class="col-sm-5 col-lg-4 form-group">
                         <label for="location">Location</label>
-                        <input type="text" id="location" name="location" placeholder="ex: Dhaka" value="" class="form-control">
+                        <input type="text" id="location" name="location" placeholder="ex: Dhaka" class="form-control">
                     </div>
                     <div class="col-sm-1 col-lg-2 form-group">
                         <button type="submit" name="name" class="btn btn-outline-white-primary job-main-form__button">
@@ -27,31 +27,52 @@
 </section>
 <section>
     <div class="container">
-        <h3 class="heading">We have found <span class="accent">{{ jobs.count }}</span> jobs</h3>
-        {% for job in jobs %}
+        <h3 class="heading">All Registerd Companies<span class="accent"></span></h3>
+        <div class="row featured align-items-stretch">
+            {% for company in companies %}
+            <div class="col-lg-3 mb-5 mb-lg-0">
+                <div class="box-image-text bg-visible full-height">
+                    <!-- <div class="top">
+                            <a href="#">
+                                <div class="image">
+                                    <img src="{% static 'img/featured1.jpg' %}" alt="" class="img-fluid">
+                                </div>
+                                <div class="bg"></div>
+                                <div class="logo">
+                                    <img src="{% static 'img/company-1.png' %}" alt="" style="max-width: 80px;">
+                                </div>
+                            </a>
+                        </div> -->
+                    <div class="content">
+                        <div>
+                            <img src="{{ company.userprofile.image.url }}" alt="Company Logo" style="height: 100px; width: 100px;border-radius: 50%;">
+                        </div>
+                        <div>
+                            <h5><a href="{% url 'accounts:user-detail' company.id %}"><i class="fa fa-building"></i> {{ company.first_name }}</a></h5>
+                        </div>
+                        <p class="featured__details"><i class="fa fa-map-marker job__location"></i> {{ company.userprofile.address }}
+                        </p>
+                        <!-- <p><i class="fa fa-building"></i> {{ company.first_name }}</p> -->
+                        <!-- <a><button class="btn btn-outline-white-primary">Read More</button></a> -->
+                        <!-- <p>{{ job.description|safe|truncatechars:40 }}</p> -->
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <!-- {% for job in jobs %}
         <div class="job-listing  ">
             <div class="row">
                 <div class="col-md-12 col-lg-6">
                     <div class="row">
                         <div class="col-2">
-                            <img src="{{ job.user.userprofile.image.url }}" alt="user-image " class="img-fluid">
+                            <img src="{% static 'img/company-1.png' %}" alt="Ipsioou " class="img-fluid">
                         </div>
                         <div class="col-10">
                             <h4 class="job__title"><a href="{% url 'jobs:jobs-detail' job.id %}">{{ job.title }}</a></h4>
-
-                            {% if request.user.is_authenticated and request.user == job.user %}
-                            <a href="{% url 'accounts:my-profile' %}">
-                                <p class="job__company">
-                                    <i class="fa fa-building"></i> {{ job.company_name }}
-                                </p>
-                            </a>
-                            {% else %}
-                            <a href="{% url 'accounts:user-detail' job.user.id %}">
-                                <p class="job__company">
-                                    <i class="fa fa-building"></i> {{ job.company_name }}
-                                </p>
-                            </a>
-                            {% endif %}
+                            <p class="job__company">
+                                {{ job.company_name }}
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -60,17 +81,10 @@
                 <div class="col-10 col-md-3 col-lg-3 ml-auto">
                     <p>Posted {{ job.created_at|timesince }}</p>
                 </div>
-                <div class="col-sm-12 col-md-2 col-lg-1">
-                    <div class="job__star">
-                        {% if job.type == '1' %}
-                        <span class="badge featured-badge badge-success">Paid</span> {% elif job.type == '2' %}
-                        <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
-                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Remote</span> {% endif %}
-                    </div>
-                </div>
             </div>
         </div>
-        {% endfor %} {% if is_paginated %}
+        {% endfor %}  -->
+        {% if is_paginated %}
         <div class="row">
             <div class="col-md-12">
                 <nav aria-label="Page navigation example" class="d-flex justify-content-center mt-4 mb-4">
