--- a/templates/jobs/jobs.html
+++ b/templates/jobs/jobs.html
@@ -2,18 +2,18 @@
 
 <section class="job-form-section job-form-section--compressed">
     <div class="container">
-        <h4 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h4>
-        <form id="job-main-form" method="get" action="#" class="job-main-form">
+        <h3 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h3>
+        <form id="job-main-form" method="get" action="#" class="job-main-form" style="background-image: linear-gradient(180deg, #05386B, #fffff5);">
             <div class="controls">
                 <div class="row align-items-end">
                     <div class="col-sm-1 col-lg-2"></div>
                     <div class="col-sm-5 col-lg-4 form-group">
                         <label for="profession">Profession</label>
-                        <input type="text" id="profession" name="profession" placeholder="Profession you are looking for" class="form-control">
+                        <input type="text" id="profession" name="profession" placeholder="ex: Software Engineer" class="form-control">
                     </div>
                     <div class="col-sm-5 col-lg-4 form-group">
                         <label for="location">Location</label>
-                        <input type="text" id="location" name="location" placeholder="Any particular location?" value="Bay Area" class="form-control">
+                        <input type="text" id="location" name="location" placeholder="ex: Dhaka" class="form-control">
                     </div>
                     <div class="col-sm-1 col-lg-2 form-group">
                         <button type="submit" name="name" class="btn btn-outline-white-primary job-main-form__button">
@@ -54,7 +54,7 @@
                         </p>
                         <p><i class="fa fa-money"></i> {{ job.salary }}</p>
                         <p><i class="fa fa-building"></i> {{ job.user.first_name }}</p>
-                        <a><button class="btn btn-outline-white-primary">Read More</button></a>
+                        <!-- <a><button class="btn btn-outline-white-primary">Read More</button></a> -->
                         <!-- <p>{{ job.description|safe|truncatechars:40 }}</p> -->
                     </div>
                 </div>
