--- a/templates/jobs/employee/applied-jobs.html
+++ b/templates/jobs/employee/applied-jobs.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %} All jobs {% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% block title %} All Companies {% endblock %} {% block content %}
 
 <section class="job-form-section job-form-section--compressed" style="background-image: linear-gradient(180deg, #05386B, #fffff5);">
     <div class="container">
         <h3 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h3>
         <form id="job-main-form" method="get" action="#" class="job-main-form">
             <div class="controls">
-                <div class="row align-items-end">
+                <div class="row align-items-end" style="align-items: center;">
                     <div class="col-sm-1 col-lg-2"></div>
                     <div class="col-sm-5 col-lg-4 form-group">
                         <label for="profession">Profession</label>
@@ -27,65 +27,66 @@
 </section>
 <section>
     <div class="container">
-        <h3 class="heading">All Jobs<span class="accent"></span> jobs</h3>
-        <div class="row featured align-items-stretch">
-            {% for job in jobs %}
-            <div class="col-lg-3 mb-5 mb-lg-0">
-                <div class="box-image-text bg-visible full-height">
-                    <!-- <div class="top">
-                            <a href="#">
-                                <div class="image">
-                                    <img src="{% static 'img/featured1.jpg' %}" alt="" class="img-fluid">
-                                </div>
-                                <div class="bg"></div>
-                                <div class="logo">
-                                    <img src="{% static 'img/company-1.png' %}" alt="" style="max-width: 80px;">
-                                </div>
-                            </a>
-                        </div> -->
-                    <div class="content">
-                        <div>
-                            <h5><a href="{% url 'jobs:jobs-detail' job.id %}">{{ job.title }}</a></h5>
-                        </div>
-                        <p class="featured__details"><i class="fa fa-map-marker job__location"></i> {{ job.location }} {% if job.type == '1' %}
-                            <span class="badge featured-badge badge-success">Paid</span> {% elif job.type == '2' %}
-                            <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
-                            <span style="color: #ffffff;" class="badge featured-badge badge-warning">Paid</span> {% endif %}
-                        </p>
-                        <p><i class="fa fa-money"></i> {{ job.salary }}</p>
-                        <p><i class="fa fa-building"></i> {{ job.user.first_name }}</p>
-                        <!-- <a><button class="btn btn-outline-white-primary">Read More</button></a> -->
-                        <!-- <p>{{ job.description|safe|truncatechars:40 }}</p> -->
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <!-- {% for job in jobs %}
-        <div class="job-listing  ">
+        <h3 class="heading">Jobs,You Have Applied For<span class="accent"></span></h3>
+        {% for job in applied_jobs %}
+        <div class="job-listing  job-listing--last">
             <div class="row">
                 <div class="col-md-12 col-lg-6">
                     <div class="row">
                         <div class="col-2">
-                            <img src="{% static 'img/company-1.png' %}" alt="Ipsioou " class="img-fluid">
+                            <img src="{{job.job.user.userprofile.image.url}}" alt="ShareBoardd " class="img-fluid">
                         </div>
-                        <div class="col-10">
-                            <h4 class="job__title"><a href="{% url 'jobs:jobs-detail' job.id %}">{{ job.title }}</a></h4>
-                            <p class="job__company">
-                                {{ job.company_name }}
-                            </p>
+                        <div class="col-8">
+                            <h4 class="job__title">
+                                <a href="{% url 'jobs:jobs-detail' job.job.id %}">{{ job.job.title }}</a>
+                            </h4>
+                            <!-- {% if request.user.is_authenticated and request.user == job.user %}
+                            <a href="{% url 'accounts:my-profile' %}">
+                                <p class="job__company">
+                                    <i class="fa fa-building"></i> {{ job.company_name }}
+                                </p>
+                            </a>
+                            {% else %}
+                            <a href="{% url 'accounts:user-detail' trending.user.id %}">
+                                <p class="job__company">
+                                    <i class="fa fa-building"></i> {{ job.company_name }}
+                                </p>
+                            </a>
+                            {% endif %} -->
                         </div>
                     </div>
                 </div>
-                <div class="col-10 col-md-3 col-lg-2 ml-auto"><i class="fa fa-map-marker job__location"></i> {{ job.location }}
+                <div class="col-8 col-md-3 col-lg-2 ml-auto featured__details"><i class="fa fa-map-marker job__location"></i> {{ job.job.location }}
                 </div>
-                <div class="col-10 col-md-3 col-lg-3 ml-auto">
-                    <p>Posted {{ job.created_at|timesince }}</p>
+                <div class="col-8 col-md-2 col-lg-3 ml-auto featured__details">
+                    <p>Posted {{ job.job.created_at|timesince }}</p>
+                </div>
+                <!-- <div class="col-sm-6 col-md-1 col-lg-1">
+                    <div class="job__star">
+                        {% if job.status == '1' %}
+                        <span class="badge featured-badge badge-success">Received</span> {% elif job.status == '2' %}
+                        <span class="badge featured-badge badge-primary">Selected</span> {% else %}
+                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Rejected</span> {% endif %}
+                    </div>
+                </div> -->
+                <div class="col-sm-6 col-md-1 col-lg-1">
+                    <div class="job__star" style="margin-top:-1em;">
+                        {% if job.job.type == '1' %}
+                        <span class="badge featured-badge badge-success">Paid</span> {% elif job.job.type == '2' %}
+                        <span class="badge featured-badge badge-primary">Unpaid</span> {% else %}
+                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Remote</span> {% endif %}
+                    </div>
+                    <br>
+                    <div class="job__star">
+                        {% if job.status == '1' %}
+                        <span class="badge featured-badge badge-success">Selected</span> {% elif job.status == '2' %}
+                        <span class="badge featured-badge badge-primary">Rejected</span> {% else %}
+                        <span style="color: #ffffff;" class="badge featured-badge badge-warning">Pending</span> {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
-        {% endfor %}  -->
-        {% if is_paginated %}
+        {% endfor %} {% if is_paginated %}
         <div class="row">
             <div class="col-md-12">
                 <nav aria-label="Page navigation example" class="d-flex justify-content-center mt-4 mb-4">
